Include ability to run the project

--- a/main.ipynb
+++ b/main.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta_dir = os.path.join(conda_env_name, \"meta\")\n",
+    "meta_dir = os.path.join(conda_env['name'], \"meta\")\n",
     "os.makedirs(meta_dir, exist_ok=True)"
    ]
   },
@@ -153,10 +153,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shutil.rmtree('parcels')\n",
+    "if os.path.exists('parcels'):\n",
+    "    shutil.rmtree('parcels')\n",
     "os.makedirs('parcels', exist_ok=True)\n",
     "parcel_fqn = '{name}-{version}'.format(**parcel_dict)\n",
-    "parcel_file = conda_pack.pack(prefix=conda_env_name,\n",
+    "parcel_file = conda_pack.pack(prefix=conda_env['name'],\n",
     "                         output='%s-distro.parcel' % parcel_fqn,\n",
     "                         arcroot=parcel_fqn,\n",
     "                         dest_prefix=\"/opt/cloudera/parcels/%s\" % parcel_fqn,\n",
